# kivy-computer-info

./: README.md  pyproject.toml
computer_info/: main.py
computer_info/screens/computer_info/: computer_info_screen.kv  computer_info_screen.py
computer_info/screens/main/: main_screen.kv  main_screen.py
computer_info/screens/processes_info/: processes_info_screen.kv  processes_info_screen.py
computer_info/screens/processes_info/process_info/: process_info_screen.kv  process_info_screen.py
computer_info/types/: computer_info.py  process_info.py
computer_info/uix/header/: header.kv
computer_info/utils/: computer_info.py  path.py  process_info.py
