[tool.poetry]
name = "computer-info"
version = "0.1.0"
description = ""
authors = ["JohnKGS <johnkelvinsouza@hotmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "computer_info.main:start"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
